--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2010-07-01 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Mac OS/X .app can be generated, correctly finds data in ../Resources
+
 2010-03-07 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Updated snapshot generation to use GIT instead of Arch.
