--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,4 +1,8 @@
-2010-07-01 : Christian Mauduit <ufoot@ufoot.org>
+2010-07-03 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Fixed path issues in dylib.
+
+2010-07-02 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Mac OS/X .dmg can be generated, .dylib handling needs to be fixed yet.
 
