reorganized maps according to choice by Kasper on mail dated from 20100131

--- a/liquidwar6-extra-maps/ChangeLog
+++ b/liquidwar6-extra-maps/ChangeLog
@@ -1,3 +1,9 @@
+2010-07-03 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Removed maps acadia fish five-points january nine-points 
+
+	* Added maps atlantis infestival sinusoid
+	
 2009-12-05 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Added January map by kasper.
