--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,5 +1,9 @@
 2010-07-03 : Christian Mauduit <ufoot@ufoot.org>
 
+	* Added maps acadia fish five-points january nine-points 
+
+	* Removed maps atlantis infestival sinusoid
+	
 	* Fixed path issues in dylib.
 
 2010-07-02 : Christian Mauduit <ufoot@ufoot.org>
