Default map is now subflower

--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,5 +1,7 @@
 2010-07-03 : Christian Mauduit <ufoot@ufoot.org>
 
+	* Default map is now subflower.
+
 	* Added maps acadia fish five-points january nine-points 
 
 	* Removed maps atlantis infestival sinusoid
