--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2010-07-04 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Fixed windows icon exe support.
+
 2010-07-03 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Default map is now subflower.
