--- a/liquidwar6-extra-maps/ChangeLog
+++ b/liquidwar6-extra-maps/ChangeLog
@@ -1,9 +1,13 @@
+2010-07-05 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Released 0.0.8beta.
+
 2010-07-03 : Christian Mauduit <ufoot@ufoot.org>
 
-	* Removed maps acadia fish five-points january nine-points 
+	* Removed maps acadia fish five-points january nine-points
 
 	* Added maps atlantis infestival sinusoid
-	
+
 2009-12-05 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Added January map by kasper.
