--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2010-07-05 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Released 0.0.8beta.
+
 2010-07-04 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Added doc to Mac OS/X package + fixed path issues
@@ -8,10 +12,10 @@
 
 	* Default map is now subflower.
 
-	* Added maps acadia fish five-points january nine-points 
+	* Added maps acadia fish five-points january nine-points
 
 	* Removed maps atlantis infestival sinusoid
-	
+
 	* Fixed path issues in dylib.
 
 2010-07-02 : Christian Mauduit <ufoot@ufoot.org>
