--- a/liquidwar6/doc/liquidwar6.texi
+++ b/liquidwar6/doc/liquidwar6.texi
@@ -3646,6 +3646,7 @@ This section lists various Internet Liquid War related links.
 @item
 @uref{http://lists.gnu.org/archive/html/help-liquidwar6/}: Mailing-list archives
 @item
+@uref{http://kasperhviid.dk/liquid-stuff.html}, @uref{http://kasperhviid.dk/lw6-eyecandy.html}, @uref{http://kasperhviid.dk/lw6-gui.html}: Kasper Hviid brainstorming and resources concerning Liquid War 6.
 @uref{http://en.wikipedia.org/wiki/Liquid_War}: Liquid War entry on Wikipedia
 @item
 @uref{http://fr.wikipedia.org/wiki/Liquid_War}: Liquid War entry on Wikipedia (French)
