p2p sqlite database initialized.

--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2010-07-08 : Christian Mauduit <ufoot@ufoot.org>
+
+	* p2p sqlite database initialized.
+
 2010-07-07 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Codename is "Chuck".
