Added db smob + option --reset now clears user-dir files including database.

--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,5 +1,9 @@
 2010-07-09 : Christian Mauduit <ufoot@ufoot.org>
 
+	* Option --reset now clears user-dir files including database.
+
+	* Added db smob.
+
 	* Resources for module p2p externalized in data directory.
 
 2010-07-08 : Christian Mauduit <ufoot@ufoot.org>
