--- a/liquidwar6/doc/p2p-gdoc.texi
+++ b/liquidwar6/doc/p2p-gdoc.texi
@@ -1,4 +1,35 @@
-@deftypefun {lw6p2p_node_t *} {lw6p2p_node_new} (int @var{argc}, char * [] @var{argv}, char * @var{client_backends}, char * @var{server_backends}, char * @var{bind_ip}, int @var{bind_port}, u_int64_t @var{server_id}, char * @var{public_url})
+@deftypefun {lw6p2p_db_t *} {lw6p2p_db_open} (int @var{argc}, char * [] @var{argv}, char * @var{name})
+@var{argc}:  number of args, as passed to @code{main}
+
+@var{argv}:  args array, as passed to @code{main}
+
+@var{name}:  the database name
+
+Creates a new database object. Normally there's only one object
+like this at a given time, it can be shared among various nodes.
+The database name is appended to user directory path, this allows
+different databases to be created, in theory.
+
+@strong{Return value:}  a pointer on the newly created object.
+@end deftypefun
+
+@deftypefun {void} {lw6p2p_db_close} (lw6p2p_db_t * @var{db})
+@var{db}:  the db to close
+
+Closes a db object, memory ressources will be freed.
+
+@strong{Return value:}  none.
+@end deftypefun
+
+@deftypefun {char *} {lw6p2p_db_repr} (lw6p2p_db_t * @var{db})
+@var{db}:  the db to work on
+
+Gives a readable representation of the db
+
+@strong{Return value:}  a dynamically allocated string
+@end deftypefun
+
+@deftypefun {lw6p2p_node_t *} {lw6p2p_node_new} (int @var{argc}, char * [] @var{argv}, char * @var{client_backends}, char * @var{server_backends}, lw6p2p_db_t * @var{db}, char * @var{bind_ip}, int @var{bind_port}, u_int64_t @var{server_id}, char * @var{public_url})
 @var{argc}:  number of args, as passed to @code{main}
 
 @var{argv}:  args array, as passed to @code{main}
@@ -6,6 +37,8 @@
 @var{client_backends}:  the list of client backends to use
 
 @var{server_backends}:  the list of server backends to use
+
+@var{db}:  the database to use
 
 @var{bind_ip}:  the IP address to bind on
 
